[gd_scene load_steps=4 format=3 uid="uid://b14tgbrbus4vg"]

[ext_resource type="Script" uid="uid://cuga7llik6pvl" path="res://scenes/end/end.gd" id="1_8srqk"]
[ext_resource type="Texture2D" uid="uid://b3s5f4hrnuums" path="res://assets/CowboyDidIt.png" id="1_orl65"]
[ext_resource type="Theme" uid="uid://xgqdkyh4d4iy" path="res://theme.tres" id="3_p1qr3"]

[node name="End" type="Node"]
script = ExtResource("1_8srqk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.741176, 0.776471, 1)

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 540.0
grow_vertical = 2
color = Color(0.0352941, 0.0941176, 0.2, 1)

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(848, 519)
scale = Vector2(18.49, 18.49)
texture = ExtResource("1_orl65")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = -156.0
offset_right = 380.0
offset_bottom = 158.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TotalScore" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_p1qr3")
theme_type_variation = &"HeaderLarge"
text = "SCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Combo" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_p1qr3")
theme_type_variation = &"HeaderSmall"
text = "Combo: 0"
horizontal_alignment = 3
vertical_alignment = 1

[node name="Perfect" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_p1qr3")
theme_type_variation = &"HeaderSmall"
text = "Perfect: 0"
horizontal_alignment = 3
vertical_alignment = 1

[node name="Good" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_p1qr3")
theme_type_variation = &"HeaderSmall"
text = "Good: 0"
horizontal_alignment = 3
vertical_alignment = 1

[node name="Okay" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_p1qr3")
theme_type_variation = &"HeaderSmall"
text = "Okay: 0"
horizontal_alignment = 3
vertical_alignment = 1

[node name="Misses" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_p1qr3")
theme_type_variation = &"HeaderSmall"
text = "Misses: 0"
horizontal_alignment = 3
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
theme = ExtResource("3_p1qr3")
text = "Retry"

[node name="MainMenuButton" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
theme = ExtResource("3_p1qr3")
text = "Main Menu"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer2/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/VBoxContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
